# OvumVM

./: .clang-tidy  .gitmodules  CMakeLists.txt  CODEBASE_STRUCTURE.md  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  README.md  install.sh
.github/workflows/: ci_tests.yml
cmake/: CompileDeps.cmake  IncludeExternalLibraries.cmake  SetCompilerOptions.cmake
lib/: CMakeLists.txt
lib/bytecode_lexer/: BytecodeLexer.cpp  BytecodeLexer.hpp  BytecodeLexerError.hpp  BytecodeSourceWrapper.cpp  BytecodeSourceWrapper.hpp  CMakeLists.txt
lib/bytecode_lexer/handlers/: DefaultHandler.cpp  DefaultHandler.hpp  Handler.hpp  IdentifierHandler.cpp  IdentifierHandler.hpp  NewlineHandler.cpp  NewlineHandler.hpp  NumberHandler.cpp  NumberHandler.hpp  PunctHandler.cpp  PunctHandler.hpp  StringHandler.cpp  StringHandler.hpp  WhitespaceHandler.cpp  WhitespaceHandler.hpp
lib/bytecode_parser/: BytecodeParser.cpp  BytecodeParser.hpp  BytecodeParserError.hpp  BytecodeParserErrorCode.hpp  CMakeLists.txt  ParserContext.cpp  ParserContext.hpp  ParsingSession.cpp  ParsingSession.hpp  ParsingSessionData.hpp
lib/bytecode_parser/scenarios/: CommandFactory.cpp  CommandFactory.hpp  CommandParser.cpp  CommandParser.hpp  FunctionFactory.cpp  FunctionFactory.hpp  FunctionParser.cpp  FunctionParser.hpp  ICommandFactory.hpp  IParserHandler.hpp  IfParser.cpp  IfParser.hpp  InitStaticParser.cpp  InitStaticParser.hpp  PlaceholderCommandFactory.cpp  PlaceholderCommandFactory.hpp  VtableParser.cpp  VtableParser.hpp  WhileParser.cpp  WhileParser.hpp
lib/execution_tree/: Block.cpp  Block.hpp  BytecodeCommands.cpp  BytecodeCommands.hpp  CMakeLists.txt  CacheKey.cpp  CacheKey.hpp  Command.hpp  ConditionalExecution.cpp  ConditionalExecution.hpp  ExecutionConcepts.hpp  ExecutionResult.hpp  Function.cpp  Function.hpp  FunctionRepository.cpp  FunctionRepository.hpp  IExecutable.hpp  IFunctionExecutable.hpp  IfMultibranch.cpp  IfMultibranch.hpp  JitCompilingFunction.hpp  PassedExecutionData.hpp  PureFunction.hpp  WhileExecution.cpp  WhileExecution.hpp  command_factory.cpp  command_factory.hpp
lib/executor/: BuiltinFunctions.cpp  BuiltinFunctions.hpp  CMakeLists.txt  Executor.cpp  Executor.hpp  IJitExecutor.hpp  IJitExecutorFactory.hpp  PlaceholderJitExecutor.cpp  PlaceholderJitExecutor.hpp  PlaceholderJitExecutorFactory.cpp  PlaceholderJitExecutorFactory.hpp  builtin_factory.cpp  builtin_factory.hpp
lib/runtime/: ArrayReferenceScanner.hpp  ByteArray.cpp  ByteArray.hpp  CMakeLists.txt  DefaultReferenceScanner.hpp  EmptyReferenceScanner.hpp  FieldInfo.hpp  FunctionId.hpp  IGarbageCollector.hpp  IVariableAccessor.hpp  MarkAndSweepGC.cpp  MarkAndSweepGC.hpp  MemoryManager.cpp  MemoryManager.hpp  ObjectDescriptor.hpp  ObjectRepository.cpp  ObjectRepository.hpp  RuntimeMemory.hpp  StackFrame.hpp  Variable.hpp  VariableAccessor.hpp  VirtualTable.cpp  VirtualTable.hpp  VirtualTableRepository.cpp  VirtualTableRepository.hpp
lib/runtime/gc/: IGarbageCollector.hpp  MarkAndSweepGC.cpp  MarkAndSweepGC.hpp
lib/runtime/gc/reference_scanners/: ArrayReferenceScanner.cpp  ArrayReferenceScanner.hpp  DefaultReferenceScanner.cpp  DefaultReferenceScanner.hpp  IReferenceScanner.hpp
lib/vm_ui/: CMakeLists.txt  vm_ui_functions.cpp  vm_ui_functions.hpp
tests/: CMakeLists.txt  builtin_functions_tests.cpp  bytecode_commands_tests.cpp  bytecode_lexer_tests.cpp  bytecode_parser_tests.cpp  gc_tests.cpp  jit_tests.cpp  main_test.cpp  unit_tests.cpp
tests/test_suites/: BuiltinTestSuite.cpp  BuiltinTestSuite.hpp  BytecodeCommandsTestSuite.cpp  BytecodeCommandsTestSuite.hpp  BytecodeLexerTestSuite.cpp  BytecodeLexerTestSuite.hpp  BytecodeParserTestSuite.cpp  BytecodeParserTestSuite.hpp  GcTestSuite.cpp  GcTestSuite.hpp  ProjectIntegrationTestSuite.cpp  ProjectIntegrationTestSuite.hpp  X64JitTestSuite.cpp  X64JitTestSuite.hpp
